[build-system]
requires = ["setuptools>=69", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucid-component-ros-bridge"
dynamic = ["version"]
description = "LUCID component that bridges ROS 1 topics to LUCID MQTT, enabling any ROS device to act as a LUCID agent."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "LUCID" }]
dependencies = [
  "lucid-component-base @ git+https://github.com/LucidLabPlatform/lucid-component-base@v2.3.1",
  "pyyaml>=6.0",
  "rospkg>=1.5",
  "rospy_message_converter>=0.5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.entry-points."lucid_components"]
ros_bridge = "lucid_component_ros_bridge.component:RosBridgeComponent"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["lucid_component_ros_bridge*"]

[tool.setuptools.package-data]
lucid_component_ros_bridge = ["*.yaml"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
